# sdk

./: README.md
.github/workflows/: publish-npm.yml  publish-pypi.yml
skrape-js/: LICENSE  README.md  bun.lockb  package.json  tsconfig.json
skrape-js/src/: dev.ts  index.ts
skrape-js/src/__tests__/: index.test.ts
skrape-py/: .gitignore  README.md  pyproject.toml
skrape-py/examples/: manual_test.py
skrape-py/skrape/: __init__.py  client.py  errors.py
skrape-py/tests/: test_client.py
